add mods aero